SLCORE-1555 Run medium tests in parallel (#1438)
* SLCORE-1555 Run medium tests in parallel

* SLCORE-1555 Switch to different WS server implementation

* SLCORE-1555 Clean up expired commands when posting to the analysis queue

* SLCORE-1555 Gracefully stop components when stopping analysis scheduler

We are canceling all commands, but this just changes the cancelation flag in the monitor. Analysis can still continue to run. We need to wait for proper termination of the analysis queue and thread before stopping components

* SLCORE-1555 Augment timeouts in tests

Tests run in parallel so each test can take longer in some steps, and it revealed some races in tests or too low timeouts

* SLCORE-1555 Fix thread leaks due to missing executors shutdown

* SLCORE-1555 Remove unreliable tests

* SLCORE-1555 Ignore coverage for test-utils

* SLCORE-1555 Fix flaky test