@@ -74,7 +74,7 @@ class WebSocketMediumTests {
   void prepare() {
     webSocketServerEU = new WebSocketServer();
     webSocketServerEU.start();
-    webSocketServerUS = new WebSocketServer(WebSocketServer.DEFAULT_PORT + 1);
+    webSocketServerUS = new WebSocketServer();
     webSocketServerUS.start();
   }
 
@@ -529,9 +529,9 @@ class WebSocketMediumTests {
       backend.getConnectionService()
         .didUpdateConnections(new DidUpdateConnectionsParams(emptyList(), List.of(new SonarCloudConnectionConfigurationDto("connectionId", "orgKey", SonarCloudRegion.EU, false))));
 
-      await().untilAsserted(() -> assertThat(client.getLogMessages()).contains("Error while trying to create WebSocket connection for ws://localhost:54321/endpoint"));
+      await().untilAsserted(() -> assertThat(client.getLogMessages()).contains("Error while trying to create WebSocket connection for " + webSocketServerEU.getUri()));
 
-      webSocketServerEU.start();
+      webSocketServerEU.restart();
       // Emulate a change on the connection to force WebSocket service to reconnect
       backend.getConnectionService().didChangeCredentials(new DidChangeCredentialsParams("connectionId"));
 
@@ -983,7 +983,7 @@ class WebSocketMediumTests {
 
       var issueStorage = backend.getIssueStorageService().connection("connectionId").project("projectKey").findings();
 
-      webSocketServerEU.getConnections().get(0).sendMessage(
+      webSocketServerEU.getConnections().getFirst().sendMessage(
         """
           {
             "event": "TaintVulnerabilityRaised",
@@ -1515,8 +1515,8 @@ class WebSocketMediumTests {
       .withSonarQubeCloudEuRegionApiUri(server.baseUrl())
       .withSonarQubeCloudUsRegionUri(server.baseUrl())
       .withSonarQubeCloudUsRegionApiUri(server.baseUrl())
-      .withSonarQubeCloudEuRegionWebSocketUri(webSocketServerEU.getUrl())
-      .withSonarQubeCloudUsRegionWebSocketUri(webSocketServerUS.getUrl());
+      .withSonarQubeCloudEuRegionWebSocketUri(webSocketServerEU.getUri())
+      .withSonarQubeCloudUsRegionWebSocketUri(webSocketServerUS.getUri());
   }
 
   public static class WebSocketPayloadBuilder {
